"Roadbook of Loire" : add an introduction

--- a/main.lyx
+++ b/main.lyx
@@ -2190,7 +2190,122 @@ Annexes
 \end_layout
 
 \begin_layout Section*
-Roadbook
+Carnet de route
+\end_layout
+
+\begin_layout Standard
+Les 8
+\begin_inset space ~
+\end_inset
+
+pages ou 4
+\begin_inset space ~
+\end_inset
+
+feuillets qui suivent forment le 
+\emph on
+carnet de route
+\emph default
+ de notre 
+\begin_inset Quotes fld
+\end_inset
+
+descente de Loire
+\begin_inset Quotes frd
+\end_inset
+
+ en kayak.
+\end_layout
+
+\begin_layout Standard
+Découpez-le, adaptez-le et servez-vous en pour descendre ce beau fleuve,
+ de sa source jusqu'à son estuaire, ou simplement quelques-uns de ses mille
+ kilomètres.
+\end_layout
+
+\begin_layout Standard
+Il est composé de trois parties.
+\end_layout
+
+\begin_layout Standard
+La 1
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+ère
+\end_layout
+
+\end_inset
+
+ est un tableau et sa légende, listant les villes et autres lieux remarquables
+ bordant la Loire, ainsi que des informations sur chacun (kilomètres, attraits
+ culturel, dangers et difficultés à proximité...).
+\end_layout
+
+\begin_layout Standard
+La 2
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+e
+\end_layout
+
+\end_inset
+
+ est une liste des dangers et des difficultés qui jalonnent le fleuve, ainsi
+ que les manières dont nous les avons passés et appréhendés.
+ Ceux-ci sont numérotés de 1
+\begin_inset space ~
+\end_inset
+
+à
+\begin_inset space ~
+\end_inset
+
+49 et cités dans le 1
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+ère
+\end_layout
+
+\end_inset
+
+ partie.
+\end_layout
+
+\begin_layout Standard
+La 3
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+e
+\end_layout
+
+\end_inset
+
+ partie inclut deux petites cartes, centrées sur les deux grands barrages
+ de la Loire : celui de Grangent et celui de Villerest.
+ Y sont tracés les cheminements que nous avons suivis pour les franchir,
+ portant notre kayak sur un kilomètre et demi, à chaque fois.
+\end_layout
+
+\begin_layout Standard
+Vous saurez donc les lieux pratiques et/ou sympas où vous arrêter, les difficult
+és auxquelles vous serez confrontés et comment les franchir.
+ Pour le reste, nous vous encourageons à improviser et vous laisser aller...
+\end_layout
+
+\begin_layout Standard
+Une toute dernière précision, d'importance cependant.
+ Nous avons descendu la Loire en avril et mai
+\begin_inset space ~
+\end_inset
+
+2011, par (très) basses eaux et (très) beau temps, sur un kayak démontable,
+ bien plus fragile que leurs homologues rigides ou gonflables.
+ Ce contexte est -- bien entendu -- à prendre en compte, dans votre lecture
+ de ce carnet de route.
 \end_layout
 
 \begin_layout Standard
