Add the text : En état de guerre

--- a/main.lyx
+++ b/main.lyx
@@ -2194,11 +2194,11 @@ Carnet de route
 \end_layout
 
 \begin_layout Standard
-Les 8
+Les 10
 \begin_inset space ~
 \end_inset
 
-pages ou 4
+pages ou 5
 \begin_inset space ~
 \end_inset
 
@@ -4991,6 +4991,341 @@ Mais la course folle des aiguilles, elle, continue.
 \begin_layout Standard
 Mais le voyage va au-delà des kilomètres ; il est aussi et surtout dans
  nos têtes.
+\end_layout
+
+\begin_layout Section*
+En état de guerre
+\end_layout
+
+\begin_layout Standard
+Cela faisait de longs mois qu'ils se rongeaient le frein.
+ Quelques dimanches, après avoir nourris leur meute encagée, ils s'isolaient
+ et -- pleins de morosité et de tendresse mêlées -- caressaient leur 
+\begin_inset Quotes fld
+\end_inset
+
+outil
+\begin_inset Quotes frd
+\end_inset
+
+, l'astiquant juste ce qu'il faut pour ne pas craquer.
+ Cela calmait leur impatiente.
+\end_layout
+
+\begin_layout Standard
+Août se bouclait enfin ; les touristes rentraient au bercail et au boulot.
+ L'air leur semblait plus oxygéné, les hauteurs belles comme jamais et la
+ vie se couvrait d'un voile rose de bonheur.
+\end_layout
+
+\begin_layout Standard
+Les journées de septembre se mirent à tomber, l'une après l'autre.
+ Tout leur corps tremblait d'une montée d'adrénaline fulgurante.
+ Ils étaient comme des taulards qui n'auraient plus touché de minettes depuis
+ longtemps, et qui s'apprêtaient à sortir de cage...
+\end_layout
+
+\begin_layout Cul-de-lampe
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+11
+\begin_inset space ~
+\end_inset
+
+septembre
+\begin_inset space ~
+\end_inset
+
+2011.
+ Lubéron.
+ La chasse au petit gibier est ouverte.
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+
+\emph on
+5
+\begin_inset space \thinspace{}
+\end_inset
+
+h.
+
+\emph default
+ Allongés dans la tente, sous un pin, nous entendons les premières clochettes
+ canines tintinnabuler.
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+
+\emph on
+6
+\begin_inset space \thinspace{}
+\end_inset
+
+h - 7
+\begin_inset space \thinspace{}
+\end_inset
+
+h.
+
+\emph default
+ Coups de feu ! Ça pétarade dans tous les plis et replis de la montagne,
+ sans s'interrompre, sans gêne.
+ L'adrénaline de tant de mâles se libère enfin ! Plus de cran qui retient
+ la gâchette.
+ Plus d'interdit qui retient l'âme.
+ Les chasseurs se défoulent, tirant à cartouches ininterrompues.
+ Nous nous croyons en état de guerre.
+ Pauvres lièvres.
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+
+\emph on
+7
+\begin_inset space \thinspace{}
+\end_inset
+
+h - 8
+\begin_inset space \thinspace{}
+\end_inset
+
+h.
+
+\emph default
+ Progressivement, le feu se calme, la fréquence des coups s'apaise.
+ La pression est retombée.
+ Mais les chiens prennent le relai et, à leur tour, expulsent le trop plein
+ d'énergie longuement accumulée, en cage souvent.
+ Pendant une heure, ils gueulent et sonnent à tout rompre, courant au cul
+ du lièvre, dans la pinède et la garrigue.
+ Régulièrement, les coups de feu des maîtres claquent, attisant -- encore
+ et encore -- les nerfs des bêtes, et les nôtres aussi.
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+
+\emph on
+8
+\begin_inset space \thinspace{}
+\end_inset
+
+h.
+
+\emph default
+ Le thé est bu ; les gâteaux ingurgités ; la tente pliée ; les sacs bouclés.
+ Nous sommes prêts à partir.
+ Nous prenons du temps -- un peu -- pour se regarder, pour s'embrasser.
+ Et je dis : 
+\begin_inset Quotes fld
+\end_inset
+
+Ce matin, Marie, il va pas falloir marcher rêveur.
+ Parlons, parlons toujours : de ta mère, du voyage, de nourriture, de n'importe
+ quoi !
+\begin_inset Quotes frd
+\end_inset
+
+
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+
+\emph on
+8
+\begin_inset space \thinspace{}
+\end_inset
+
+h - 9
+\begin_inset space \thinspace{}
+\end_inset
+
+h.
+
+\emph default
+ Nous marchons en silence.
+ Sans surprise, il n'est pas si simple de se forcer au dialogue.
+ Nous enfonçant toujours plus dans la garrigue, nous nous disons qu'au moindre
+ couinement suspect de notre part, une volée de plombs ira se ficher dans
+ nos mollets.
+ Heureuse perspective.
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+
+\emph on
+9
+\begin_inset space \thinspace{}
+\end_inset
+
+h.
+
+\emph default
+ Sur une autre colline, rencontre d'une battue au sanglier ; cette chasse
+ là est ouverte depuis trois semaines déjà.
+ Il y a les veilleurs, les rabatteurs en 4x4 et les chiens -- beaux outils
+ biologiques -- que l'on lâche dénicher la bête et qui travaillent en autonomie,
+ gardés uniquement par un collier électrique.
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+
+\emph on
+10
+\begin_inset space \thinspace{}
+\end_inset
+
+h.
+
+\emph default
+ En dessous du Pic de l'Aigle, un gros 4x4 rouge arrive en trombe dans la
+ poussière.
+ Deux chasseurs en sortent ; l'un deux tripote nerveusement un émetteur.
+ Mais rien à faire, les chiens sont perdus.
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+
+\emph on
+15
+\begin_inset space \thinspace{}
+\end_inset
+
+h.
+
+\emph default
+ Nous terminons l'étape à Lourmarin, cuits par le soleil, assoiffés par
+ sa chaleur, harassés.
+ De rares coups de feu ont ponctué la fin de cette marche.
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+Vivement dimanche prochain !
+\end_layout
+
+\begin_layout Cul-de-lampe
+
+\end_layout
+
+\begin_layout Standard
+Que l'on vous dise...
+ Nous n'avons aucune hargne particulière contre les chasseurs.
+ Nous connaissons ou avons rencontré, d'ailleurs, de bons hommes, chassant
+ par passion.
+\end_layout
+
+\begin_layout Standard
+Quant à moi, je suis un anti-rien, ouvert à tout, aimant entendre la diversité,
+ la sentir, la palper, la goûter, la connaître, la comprendre.
+ Je suis prompt, ainsi, à me faire l'avocat des diables ou à m'opposer à
+ l'arbitraire qui s'impose ! Et j'entends bien continuer à croire que la
+ connerie est universelle et pas l'affaire de quelques uns, ni de quelques
+ pratiques bornées.
+\end_layout
+
+\begin_layout Standard
+Alors, aucune raison d'écrire, ici, que les chasseurs sont des cons.
+ Cependant...
+\end_layout
+
+\begin_layout Standard
+Lorsqu’en randonneur-promeneur vous vous éveillez, vous apprêtant à gambader
+ dans un bel environnement public et que, dès lors, ce n'est pas le gazouillis
+ des piafs qui vous accompagne, mais le 
+\begin_inset Quotes fld
+\end_inset
+
+pan
+\begin_inset Quotes frd
+\end_inset
+
+ des détonations d'armes à feu (outils à tuer, rappelons-le) : il y a un
+ problème !
+\end_layout
+
+\begin_layout Standard
+Qu'un quidam-vagabond et un tueur (involontaire) potentiel partagent le
+ même terrain de jeu : il y a un problème !
+\end_layout
+
+\begin_layout Standard
+Que des chiens soient parqués l'année, traités comme des outils sinon, assoiffés
+, souvent perdus et quelques fois tués, pour le seul jeu du chasseur : il
+ y a un problème !
+\end_layout
+
+\begin_layout Standard
+Que la détention d'armes à feu par des particuliers soit si peu contraignante
+ et réglementée, et qu'un ex-chasseur puisse conserver une arme : il y a
+ un problème !
+\end_layout
+
+\begin_layout Standard
+La pratique de la chasse soulève un nuage de problématiques et d'aberrations.
+ Détenir une arme à feu pour tuer, détruire de l'utile par loisir, pratiquer
+ un sport dangereux dans un environnement public, affirmer qu'une tuerie
+ participe à préserver la biodiversité, sont quelques bourrelets de ce nuage.
+ Cette pratique semble s'éloigner toujours plus des orientations civiques
+ françaises contemporaine.
+ Pourtant -- par jeu de pression, de pouvoir, de politique...
+ ? -- le 
+\emph on
+statu quo
+\emph default
+ demeure.
+\end_layout
+
+\begin_layout Standard
+Quant à nous, dans notre marche qui perdurera jusqu'au début de l'automne,
+ nous sommes désormais plus alertes que jamais.
 \end_layout
 
 \begin_layout Section*
