Add the text : Je voyage dans les nuages

--- a/main.lyx
+++ b/main.lyx
@@ -2305,7 +2305,11 @@ Une toute dernière précision, d'importance cependant.
 2011, par (très) basses eaux et (très) beau temps, sur un kayak démontable,
  bien plus fragile que leurs homologues rigides ou gonflables.
  Ce contexte est -- bien entendu -- à prendre en compte, dans votre lecture
- de ce carnet de route.
+ de ce 
+\emph on
+carnet de route
+\emph default
+.
 \end_layout
 
 \begin_layout Standard
@@ -5683,6 +5687,122 @@ aglagla
  un mètre seulement, notre public se rince l’œil : une belle brochette de
  vaches ; et un taureau auvergnat qui n'a pas à rougir, lui, de ses attributs.
  L'eau froide, vous savez...
+\end_layout
+
+\begin_layout Part
+Non encore classés
+\end_layout
+
+\begin_layout Section*
+Je voyage dans les nuages
+\end_layout
+
+\begin_layout Verse
+Lorsque je suis au ras du sol,
+\begin_inset Newline newline
+\end_inset
+
+Au cœur d'une ville, d'un champ ou d'un marais,
+\begin_inset Newline newline
+\end_inset
+
+Sans horizon, au fond duquel mon esprit pourrait gambader,
+\begin_inset Newline newline
+\end_inset
+
+Je lève les yeux, qu'ils embrassent le ciel.
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Verse
+Alors, si quelques nuages voguent au dessus,
+\begin_inset Newline newline
+\end_inset
+
+Cotonneux ou ondulés, filandreux ou déchirés,
+\begin_inset Newline newline
+\end_inset
+
+Je lâche la bride de mon esprit, qu'il galope vers eux
+\begin_inset Newline newline
+\end_inset
+
+Et qu'il voyage où mes yeux ne peuvent aller.
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Verse
+Mâchant leur cul et leur bout de nez,
+\begin_inset Newline newline
+\end_inset
+
+Plongeant dedans et longeant leurs frontières,
+\begin_inset Newline newline
+\end_inset
+
+Gambadant de l'un à l'autre, puis passant au suivant,
+\begin_inset Newline newline
+\end_inset
+
+Mon esprit parcourt alors la Terre entière,
+\begin_inset Newline newline
+\end_inset
+
+Les montagnes et les océans,
+\begin_inset Newline newline
+\end_inset
+
+Sans que jamais mon corps n'ait à quitter son ici.
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Verse
+Lorsque mes yeux se lèvent de terre,
+\begin_inset Newline newline
+\end_inset
+
+Vers un ciel :
+\begin_inset Newline newline
+\end_inset
+
+Ni trop vide, où je me sentirais prisonnier,
+\begin_inset Newline newline
+\end_inset
+
+Ni trop plein, où je me sentirais perdu,
+\begin_inset Newline newline
+\end_inset
+
+Et qu'ils croisent les habitants,
+\begin_inset Newline newline
+\end_inset
+
+Blancs ou gris, du monde d'au dessus,
+\begin_inset Newline newline
+\end_inset
+
+Par jeu de miroir, celui du bas se dessine
+\begin_inset Newline newline
+\end_inset
+
+Pour exister au delà de mon horizon nu.
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Verse
+En somme, je voyage dans les nuages.
 \end_layout
 
 \end_body
