"Roadbook of Loire" : small spellchecking

--- a/Roadbook Loire.lyx
+++ b/Roadbook Loire.lyx
@@ -9637,7 +9637,7 @@ Pieux en bois dans le lit, avant et sous le pont.
 \begin_inset space \quad{}
 \end_inset
 
-Blocs rocheux éparses.
+Blocs rocheux épars.
  Slalomer.
 \end_layout
 
