Add the text : Deux vaches et un ruisseau, en Lozère

--- a/main.lyx
+++ b/main.lyx
@@ -4500,6 +4500,84 @@ Chapitre 3
 \end_layout
 
 \begin_layout Section*
+Des vaches et un ruisseau, Lozère
+\end_layout
+
+\begin_layout Standard
+Ce 19
+\begin_inset space ~
+\end_inset
+
+août
+\begin_inset space ~
+\end_inset
+
+2011, nous marchions en Lozère, où coulent de nombreux ruisseaux.
+ Précisément, nous étions ici à l'extrême est de l'Aubrac, entre la Truyère
+ (au nord) et l'avant-bras du Lot (au sud).
+ L'avant veille, nous terminions la digestion de l'Auvergne à Saint\SpecialChar \nobreakdash-
+Flour,
+ pour mieux entamer le goûter lozérien.
+\end_layout
+
+\begin_layout Standard
+Malgré un réveil dans le brouillard, il faisait très chaud vers midi ; l'heure
+ du repas approchait.
+ Il nous restait un kilomètre avant la petite ville de Fournels, lorsqu'un
+ ruisseau en contre-bas se mit à nous aguicher ostensiblement.
+ Après analyse de la géographie du lieu (champ abrité, herbeux et molletonné
+ ; peu de visibilité depuis la route ; deux vaches paissant trop loin pour
+ pouvoir nous enquiquiner...), le verdict tombait : arrêt immédiat pour lavage
+ intégral.
+ Bien que la faim tiraillait nos estomacs, le repas serait la récompense
+ à notre propreté, et non l'inverse.
+\end_layout
+
+\begin_layout Standard
+Quel plaisir de se revigorer dans l'eau fraîche ! Mathieu, comme à son habitude,
+ appréciait la sensation de grand froid qui déliait son corps, plongeant
+ sa tête avec sourire.
+ Moi, comme à la mienne, je bronchais et hésitais à tremper un bout de mes
+ fesses sensibles, me crispant toute entière.
+ Et comme toujours, les éclaboussures de Mathieu eurent raison de mes hésitation
+s.
+ Je plongeais, non sans cri.
+\end_layout
+
+\begin_layout Standard
+Après nos corps, à nos guenilles.
+ Tout passa à la machine de maman Nature.
+ Nos chaussettes, surtout, en avaient grand besoin.
+ Alors, elle furent frottées plus que de raison sur les pierres polies du
+ ruisseau.
+ Puis, en plein cagnard, nous couvrîmes de nos vêtements le petit champ
+ tout entier.
+ Tout sécha très vite ; nous n'étions pourtant pas pressés de repartir piétiner
+ sous la chaleur ; la sieste s'imposait.
+\end_layout
+
+\begin_layout Standard
+C'était sans compter les voisines vaches -- deux belles aubrac --, qui en
+ quelques pas de trot franchirent le ruisseau, squattant notre station balnéaire
+ improvisée.
+ Mais nous ne les intéressions qu'à moitié ; notre panneau solaire, en revanche,
+ captait largement leur attention et la bave de leur grosse langue.
+ Première fois que je voyais une langue de bœuf vivante...
+ Miam ! Je m'approchais alors de ces belles, les tapotant avec appréhension
+ pour les faire reculer.
+ Que j'étais cocasse, quasi cul nu, une main tendue, tentant de communiquer
+ avec ces êtres venus d'ailleurs.
+\end_layout
+
+\begin_layout Standard
+Elles finirent pourtant pas se lasser de nous et s'en allèrent paître plus
+ loin.
+ Quant à nos pas, ils reprirent rapidement les chemins de Lozère, tandis
+ que, déjà, une vague de sueur se propageait le long de nos épines dorsales.
+ Ah ! que notre ruisseau frémissant semblait loin.
+\end_layout
+
+\begin_layout Section*
 Portrait d'un Sud
 \end_layout
 
