Add the text : Gastronomie de grands chemins

--- a/main.lyx
+++ b/main.lyx
@@ -4500,7 +4500,7 @@ Chapitre 3
 \end_layout
 
 \begin_layout Section*
-Des vaches et un ruisseau, Lozère
+Lozère, ruisseau et langues de bœuf
 \end_layout
 
 \begin_layout Standard
@@ -5881,6 +5881,432 @@ Pour exister au delà de mon horizon nu.
 
 \begin_layout Verse
 En somme, je voyage dans les nuages.
+\end_layout
+
+\begin_layout Section*
+Gastronomie de grands chemins
+\end_layout
+
+\begin_layout Standard
+\noindent
+\align right
+
+\shape italic
+Six mois d'un beau voyage : ça nourrit la tête mais guère l'estomac.
+\end_layout
+
+\begin_layout Standard
+Avant de vous dévoiler nos usages gastronomiques, veuillez répondre à ce
+ mini-quizz.
+ Que sommes-nous devenus au terme de six mois de quasi-ermitage ?
+\end_layout
+
+\begin_layout Quote
+
+\emph on
+Réponse A :
+\emph default
+ des squelettes ambulants ?
+\begin_inset Newline newline
+\end_inset
+
+
+\emph on
+Réponse B :
+\emph default
+ des chasseurs-cueilleurs-voleurs de poules ?
+\begin_inset Newline newline
+\end_inset
+
+
+\emph on
+Réponse C :
+\emph default
+ des experts en cuisine régionale ?
+\begin_inset Newline newline
+\end_inset
+
+
+\emph on
+Réponse D :
+\emph default
+ des sportifs de haut niveau au régime strict ?
+\end_layout
+
+\begin_layout Standard
+À vos télécommandes...
+ La bonne réponse est la 
+\begin_inset Quotes fld
+\end_inset
+
+Réponse Z
+\begin_inset Quotes frd
+\end_inset
+
+ : nous ne sommes devenus rien de tout cela, mais un peu de chaque.
+ Reprenons alors ces quatre réponses qui, peut-être, titillent votre curiosité.
+\begin_inset VSpace bigskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+
+\emph on
+Des squelettes ambulants ?
+\end_layout
+
+\begin_layout Standard
+Hé non ! 
+\begin_inset Quotes fld
+\end_inset
+
+C'est bien la peine de voyager si durement, si ce n'est pas pour perdre
+ quelques kilos
+\begin_inset Quotes frd
+\end_inset
+
+, le résume justement ma mère.
+ Mais, nous aimons bien trop manger.
+\end_layout
+
+\begin_layout Standard
+Durant notre 
+\begin_inset Quotes fld
+\end_inset
+
+descente de Loire
+\begin_inset Quotes frd
+\end_inset
+
+, seul Mathieu a perdu 4
+\begin_inset space ~
+\end_inset
+
+kilos.
+ Ce n'est pourtant pas faute d'efforts pour les garder.
+ Devait-il pagayer un chouïa plus, sans doute...
+\begin_inset VSpace bigskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+
+\emph on
+Des chasseurs-cueilleurs-voleurs de poules 
+\emph default
+?
+\end_layout
+
+\begin_layout Standard
+La chasse ? Très peu pour nous.
+ Les lièvres et autres gibiers, c'est dans notre appareil photo que nous
+ aimons les avoir.
+\end_layout
+
+\begin_layout Standard
+La cueillette ? Déjà un peu plus.
+ Nous avons, en effet, dégusté quelques mets sauvages et chapardé dans les
+ vergers, vignes et autres champs.
+ Mais jamais aucun gallinacé.
+ Question de principes !
+\end_layout
+
+\begin_layout Standard
+Une fois, nous nous sommes essayés à la mycologie, croquant de belles coulemelle
+s crues, non lavées.
+ Nous les avons dégusté ; notre flore intestinale aussi...
+\begin_inset VSpace bigskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+
+\emph on
+Des experts en cuisine régionale ?
+\end_layout
+
+\begin_layout Standard
+Si les kebabs et les pizzas sont devenus des spécialités régionales françaises,
+ alors oui.
+ Car c'est ce genre de gastronomie qui apaisaient nos estomacs (une à deux
+ fois par semaine), sans rendre notre porte-monnaie bougon.
+\end_layout
+
+\begin_layout Standard
+Rassurez-vous, cependant.
+ Nous avons su succomber à quelques tentations typiques : les beignets de
+ carpe en Brenne, le Creusois à la noisette, l'Avèze du Cantal (
+\emph on
+hic !
+\emph default
+), la fouace de Saint-Flour, etc.
+\begin_inset VSpace bigskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+
+\emph on
+Des sportifs de haut niveau au régime strict ?
+\end_layout
+
+\begin_layout Standard
+Que non ! Fromage, saucisson, sardines à l'huile, bonbons et biscuits trop
+ sucrés ne sont pas, je pense, au menu des champions.
+ L'ingestion de fruits secs 42
+\begin_inset space ~
+\end_inset
+
+fois par jour ou la préparation de bonnes platées de féculents sont, probablemen
+t, nos seules coutumes culinaires communes.
+\end_layout
+
+\begin_layout Cul-de-lampe
+
+\end_layout
+
+\begin_layout Standard
+Concrètement, durant 6
+\begin_inset space ~
+\end_inset
+
+mois, quel a été notre cheminement culinaire ?
+\end_layout
+
+\begin_layout Standard
+En kayak, le problème du poids ne se posait pas.
+ Un temps, les conserves ont ainsi eu nos faveurs (cassoulet, raviolis,
+ choucroute et autres huileuses salades).
+ Le soir, elles offraient des repas variés et copieux.
+ Mais elles sont chères et pas toujours aisées à mettre à recycler.
+\end_layout
+
+\begin_layout Standard
+Nous nous sommes alors tournés vers de grosses boîtes de taboulé.
+ Là aussi, nous y avons renoncé.
+ Ce n'était, ni plus ni moins, que de la semoule huileuse avec quelques
+ morceaux colorés.
+ Plus rebutant encore, ces préparations sont le summum de l'alimentation
+ hyper-transformée que, sédentaires, nous préférons éviter.
+ Il ne fallait pas que cela devienne notre norme.
+\end_layout
+
+\begin_layout Standard
+Durant notre 
+\begin_inset Quotes fld
+\end_inset
+
+grande marche
+\begin_inset Quotes frd
+\end_inset
+
+, nous avons carburé à une liste limitée d'aliments.
+ Prenez : pain, riz, pâtes, fromage, saucisson, carottes, soupes, sardines
+ à l'huile, œufs, pâté, cacahuètes, pommes, chocolat, fruits secs, biscuits
+ ; et répétez cela pendant quatre mois.
+\end_layout
+
+\begin_layout Standard
+Nonobstant le caractère peu varié de ce régime, quel plaisir de 
+\begin_inset Quotes fld
+\end_inset
+
+passer à table
+\begin_inset Quotes frd
+\end_inset
+
+ ! Car au delà du réconfort physique, ces 
+\begin_inset Quotes fld
+\end_inset
+
+instants repas
+\begin_inset Quotes frd
+\end_inset
+
+ entretenaient notre moral et notre lien social et amoureux.
+ Nous savions, tout de même, rompre cette monotonie par quelques folies
+ culinaires : pâte à tartiner choco-noisettes, beurre de cacahuètes, bonbons,
+ biftecks, fromage blanc, sodas...
+ Que c'était bon !
+\end_layout
+
+\begin_layout Standard
+Pour résumer : au fil des jours et des kilomètres, nous travaillions à rendre
+ notre alimentation toujours plus simple, moins transformée et moins onéreuse.
+ À quelques reprises, nous avons même fabriqué nos propres galettes de pain
+ (une fois au gaz ; le reste au feu de bois).
+ Les repas ont tenu, de bout en bout de nos deux périples, une place d'importanc
+e : celle du lien, du moral, du réconfort.
+\end_layout
+
+\begin_layout Standard
+Terminons ce texte -- qui ne vous aura, probablement, pas mis l'eau à la
+ bouche -- par quelques-uns de nos menus typiques.
+\begin_inset VSpace bigskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+\begin_inset Box Boxed
+position "t"
+hor_pos "c"
+has_inner_box 1
+inner_pos "t"
+use_parbox 0
+use_makebox 0
+width "100col%"
+special "none"
+height "1in"
+height_special "totalheight"
+status open
+
+\begin_layout Plain Layout
+
+\series bold
+Petits-déjeuners
+\end_layout
+
+\begin_layout Itemize
+thé, café soluble, lait (en poudre ou frais selon arrivage) ;
+\end_layout
+
+\begin_layout Itemize
+biscuits sucrés (nature ou au chocolat), pain d'épice, pain avec du chocolat
+ pâtissier.
+\end_layout
+
+\begin_layout Plain Layout
+Quel plaisir, par un matin froid, de se chauffer : les mains sur un godet
+ de thé chaud ; le visage aux premiers rayons du soleil.
+\end_layout
+
+\end_inset
+
+
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+\begin_inset Box Boxed
+position "t"
+hor_pos "c"
+has_inner_box 1
+inner_pos "t"
+use_parbox 0
+use_makebox 0
+width "100col%"
+special "none"
+height "1in"
+height_special "totalheight"
+status open
+
+\begin_layout Plain Layout
+
+\series bold
+Déjeuners
+\end_layout
+
+\begin_layout Itemize
+pain + sardines à l'huile ou saucisson, pour les féculents et protéines
+ ;
+\end_layout
+
+\begin_layout Itemize
+fromage, pour la matière grasse ;
+\end_layout
+
+\begin_layout Itemize
+carottes et pommes, pour les vitamines ;
+\end_layout
+
+\begin_layout Itemize
+chocolat et biscuits, pour le sucre.
+\end_layout
+
+\begin_layout Plain Layout
+Quelle gourmandise d'éponger, avec un reste de pain, le rab d'huile d'olive.
+\end_layout
+
+\end_inset
+
+
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+\begin_inset Box Boxed
+position "t"
+hor_pos "c"
+has_inner_box 1
+inner_pos "t"
+use_parbox 0
+use_makebox 0
+width "100col%"
+special "none"
+height "1in"
+height_special "totalheight"
+status open
+
+\begin_layout Plain Layout
+
+\series bold
+Dîners
+\end_layout
+
+\begin_layout Itemize
+cacahuètes, pour l'apéro ;
+\end_layout
+
+\begin_layout Itemize
+pâtes ou riz, pour les sucres lents ;
+\end_layout
+
+\begin_layout Itemize
+saucisson ou sardines ;
+\end_layout
+
+\begin_layout Itemize
+soupe préparée avec l'eau de cuisson des féculents, pour avoir chaud ;
+\end_layout
+
+\begin_layout Itemize
+fromage ;
+\end_layout
+
+\begin_layout Itemize
+pommes et chocolat, en dessert.
+\end_layout
+
+\begin_layout Plain Layout
+Et un gros dodo, le ventre plein, emmitouflés dans nos duvets d'amoureux.
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_body
